# wuzzle

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: country.py  csv2fen.py  fen2tex.py  lichess_themes.py  main.py  pgn_splitter.py  utils.py
tests/: test_lichess_themes.py  test_main.py
